--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+
 aiogram~=2.18
 aioredis~=2.0
 environs~=9.0
 asyncpg~=0.25.0
-pyQiwiP2P~=2.0.0
+pydantic~=1.9.0
+aiohttp~=3.8.1
 typing~=3.7.4.3
+pyQiwiP2P~=2.0.0
