--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: database
     image: sameersbn/postgresql:10-2
     environment:
-      PG_PASSWORD: 670524
+      PG_PASSWORD: 15376SHAPKA
     restart: always
     ports:
       - 5432:5432
